# answer-sheet-grader

./: README.md  app.py  pyproject.toml
.github/workflows/: build-windows.yml
scripts/: build_windows.bat  build_windows.ps1  make_release_zip.ps1  run_dev.bat
